--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "postinstall": "jspm install && typings install",
     "clean.dist": "npm run rimraf -- dist",
     "clean": "npm cache clean && npm run rimraf -- typings dist jspm_packages node_modules",
-    "build": "gulp build"
+    "build": "gulp build",
+    "prebundle": "npm run clean.dist",
+    "bundle": "gulp bundle",
+    "unbundle": "gulp unbundle"
   },
   "jspm": {
     "dependencies": {
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.1",
       "babel-polyfill": "npm:babel-polyfill@^6.7.4",
-      "material-design-lite": "github:google/material-design-lite@^1.1.3"
+      "material-design-lite": "github:google/material-design-lite@^1.1.3",
+      "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {}
   },
