--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "babel-polyfill": "npm:babel-polyfill@^6.7.4",
-      "material-design-lite": "github:google/material-design-lite@^1.1.3",
       "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {}
@@ -46,6 +45,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tsb": "^1.10.3",
     "jspm": "^0.16.32",
+    "material-design-lite": "^1.1.3",
     "require-dir": "^0.3.0",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.1.5",
