--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "babel-polyfill": "npm:babel-polyfill@^6.7.4",
+      "redux": "npm:redux@^3.4.0",
       "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {}
